# aegis

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_flags.cmake  dependencies.cmake  hardening.cmake
config/: aegis.json  dangerous.json  dev.json  safe.json
docs/: adapter-contract.md  architecture.md  cli-design.md  eval-design.md  mcp-client.md  policy-model.md  replay-inspect.md  roadmap.md  sandbox-model.md  session-state.md  threat-model.md  tool-contract.md
include/aegis/: action.h  agent.h  cli.h  cli_command.h  cli_init.h  command.h  config.h  context.h  error.h  mcp.h  message.h  prompt.h  provider.h  response.h  runtime.h  sandbox.h  session.h  state.h  str.h  tool.h  tool_git.h  tool_http.h  tool_path.h  tool_process.h  tool_registry.h  trace.h  trace_reader.h  workspace.h
profiles/: assistant_agent.json  coding_agent.json  minimal_agent.json  ops_agent.json  security_agent.json
prompts/: system_assistant_agent.md  system_coding_agent.md  system_minimal_agent.md  system_ops_agent.md  system_security_agent.md
scripts/: build.sh  uninstall.sh
src/: main.c
src/adapters/: cli.c  cli_init.c  cli_init.h
src/cli/: cli.c  cli_chat.c  cli_completion.c  cli_config.c  cli_doctor.c  cli_eval.c  cli_help.c  cli_init.c  cli_inspect.c  cli_mcp.c  cli_profiles.c  cli_replay.c  cli_resume.c  cli_run.c  cli_sessions.c  cli_tools.c  cli_version.c
src/core/: action.c  agent.c  command.c  config.c  context.c  error.c  message.c  prompt.c  response.c  runtime.c  session.c  state_sqlite.c  trace_jsonl.c  trace_reader.c  workspace.c
src/providers/: anthropic.c  gemini.c  http_json.c  mock_provider.c  ollama.c  openai_compat.c  openrouter.c  provider.c
src/tools/: tool_path.c  tool_process.c  tool_registry.c
src/tools/assistant/: ask_user.c  reminder.c  send_message.c
src/tools/file/: append_file.c  list_dir.c  read_file.c  search_file.c  write_file.c
src/tools/git/: git_apply_patch.c  git_common.c  git_diff.c  git_log.c  git_status.c
src/tools/http/: http_common.c  http_get.c  http_post.c
src/tools/mcp/: mcp_client.c  mcp_tool.c
src/tools/ops/: grep_log.c  health_check.c  read_log.c
src/tools/shell/: command_policy.c  run_tests.c  shell.c
src/utils/: str.c
tests/: test_cli.py  test_context.c  test_runtime.c  test_tool_catalog.py  test_tools.c
